--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
 # git学习笔记
+Git安装：
+Linux:
+1.输入git查看；
+2.sudo apt-get install git 安装git。
+Windows：
+1.下载git，通过git bash启动；
+2.设置用户名和邮箱地址：
+git config --global user.name “用户名”
+git config --global user.email “邮箱地址”
+
+创建版本库
+1.进入仓库目录；
+2.初始化git仓库：git init。此时文件中会生成.git;
+3.工作区    暂存区：git add <file>;
+4.暂存区    git仓库：commit –m ”说明”；
+补充：git工作区域分为三层：工作区、暂存区、git仓库
+      git status可以查看此时文件状态。
+      git diff查看修改
+      git log查看历史版本
+      git log --pretty=oneline 简洁版历史版本
+      git中head,head^表示上个版本,head^^表示上两个版本，head~100表示上100个版本
+      git reset --hard 版本 回到想要回到的版本
+      git reflog记录每一次的命令
+      git rm <删除文件> 注意三层删了哪一层，哪一层版本退回，命令则不同。
+远程仓库
+克隆远程仓库：git clone 仓库地址
+同步到远程仓库: git push 
+              两种方法验证身份信息：ssh keys （廖雪城）
+              弹出登录github页面
+分支管理
+1.fast-forward模式: git branch 查看分支
+                 git branch <name>创建分支
+                 git checkout <name> 切换分支
+                 git checkout –b <name> 创建+切换分支
+                 git merge <name> 合并某分支到当前分支
+                 git branch –d <name> 删除分支
+                 git branch –D <name> 强行删除（一般为未合并的feature分支）
+2.--no-ff 切换到普通模式：强制禁用fast-forward模式，git 会在merge时生成一个新的commit,这样在分支历史上就可以看出分支信息。
+                  git merge --no-ff –m”说明” dev 切换到普通模式，创建新commit
+                  git log --graph --pretty=oneline --abbrev-commit查看分支历史，分支图
+3.解决冲突
+4.分支管理：实际开发中，master分支应该非常稳定，也就是仅用来发布新版本，平时不在上边干活，干活在dev分支。Dev分支是不稳定的，到某个时候，比如1.0版本时，再把dev分支合并到master上，在mater发布1.0版本；其他人在dev分支上再分支干活，时不时往dev分支上合并就可以了。
+  
+  多人协作时：[1]首先，试图用git push origin branch-name推送自己的修改；
+              [2]如果推送失败，则因为远程分支比你的本地更新，需要先用git pull试图合并；
+              [3]如果合并有冲突，则解决冲突，本在本地提交了；
+              [4]没有冲突或解决掉冲突后，再用git push origin branch-name推送就能成功
+              [5]如果git pull提示”no tracking information”,则说明分支与远程分支连接没有创建，用git branch --set-upstream branch-name origin/branch-name 
